--- a/trellis/group_vars/production/wordpress_sites.yml
+++ b/trellis/group_vars/production/wordpress_sites.yml
@@ -7,7 +7,7 @@ wordpress_sites:
     - canonical: alex.kinsta.com
     local_path: ../site
     branch: master
-    repo: https://github.com/AlexHyslop/trellis.git
+    repo: git@github.com:alexHyslop/trellis.git
     repo_subtree_path: site
     multisite:
       enabled: false
