--- a/trellis/group_vars/staging/wordpress_sites.yml
+++ b/trellis/group_vars/staging/wordpress_sites.yml
@@ -7,7 +7,7 @@ wordpress_sites:
     - canonical: trellis.nl
     local_path: ../site
     branch: master
-    repo: git@github.com:example/example.com.git
+    repo: git@github.com:alexHyslop/trellis.git
     repo_subtree_path: site
     multisite:
       enabled: false
